# color-picker

./: .gitignore  Cargo.toml  README.md
docs/superpowers/plans/: 2026-03-29-color-picker.md
docs/superpowers/specs/: 2026-03-29-color-picker-design.md
src/: color.rs  main.rs  overlay.rs  sampler.rs  storage.rs
src/tui/: app.rs  input.rs  mod.rs  ui.rs
