[package]
name = "color-picker"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
cocoa = "0.26"
objc = "0.2"
core-graphics = "0.24"
core-graphics-types = "0.2"
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

[dev-dependencies]
tempfile = "3"
