[package]
name = "color-picker"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
core-graphics = "0.24"
core-graphics-types = "0.2"
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSBezierPath",
    "NSColor",
    "NSEvent",
    "NSGraphics",
    "NSResponder",
    "NSRunningApplication",
    "NSScreen",
    "NSView",
    "NSWindow",
] }
objc2-core-graphics = { version = "0.3", features = ["CGWindowLevel"] }
objc2-foundation = { version = "0.3", features = ["NSGeometry", "NSRunLoop"] }

[dev-dependencies]
tempfile = "3"
